--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,12 +27,15 @@ dependencies = [
     "numpy>=2.0.0",
     "pandas>=2.0.0",
     "timezonefinder>=6.5.9",
+    "pint>=0.20.0",
     "pint-pandas>=0.7.1",
     "pint-xarray>=0.5.0",
     "geopandas>=0.13.2",
     "xarray>=0.11",
     "click>=8.2.1",
     "pyet>=1.3.0",
+    "netCDF4>=1.6.0",
+    "distributed>=2023.1.0",
 ]
 
 [project.optional-dependencies]
