--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,1 +1,20 @@
-sphinx_rtd_theme==1.3.0
+# Sphinx and documentation requirements
+Sphinx==8.1.3
+sphinx-rtd-theme==3.0.2
+sphinxcontrib-applehelp==2.0.0
+sphinxcontrib-devhelp==2.0.0
+sphinxcontrib-htmlhelp==2.1.0
+sphinxcontrib-jquery==4.1
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==2.0.0
+sphinxcontrib-serializinghtml==2.0.0
+
+# Documentation dependencies
+docutils==0.21.2
+Jinja2==3.1.6
+MarkupSafe==3.0.2
+Pygments==2.19.2
+babel==2.17.0
+snowballstemmer==3.0.1
+imagesize==1.4.1
+packaging==25.0
