--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -18,3 +18,18 @@ babel==2.17.0
 snowballstemmer==3.0.1
 imagesize==1.4.1
 packaging==25.0
+
+# Package dependencies required for autodoc
+scipy>=1.15.0
+numpy>=2.0.0
+pandas>=2.0.0
+timezonefinder>=6.5.9
+pint>=0.20.0
+pint-pandas>=0.7.1
+pint-xarray>=0.5.0
+geopandas>=0.13.2
+xarray>=0.11
+click>=8.2.1
+pyet>=1.3.0
+netCDF4>=1.6.0
+distributed>=2023.1.0
