--- a/pyproject.toml
+++ b/pyproject.toml
@@ -82,6 +82,10 @@ warn_return_any = true
 warn_unused_configs = true
 disallow_untyped_defs = true
 
+[tool.coverage.paths]
+meshflow = ["src/marrmotflow", "*/marrmotflow/src/marrmotflow"]
+tests = ["tests", "*/marrmotflow/tests"]
+
 # package data
 [tool.setuptools.package-data]
-your_package = ["templates/*.txt"]
+marrmotflow = ["templates/*"]
